--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,9 @@
 .read-the-docs {
   color: #888;
 }
+
+.not_sus_website {
+  color: rgb(120, 19, 86);
+  font-family: "Lucida Console";
+  padding-bottom: 20px;
+}
