--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,20 @@
 }
 
 .not_sus_website {
-  color: rgb(120, 19, 86);
-  font-family: "Lucida Console";
+  color: rgb(222, 153, 199);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding-bottom: 20px;
 }
 
 .h2 {
   padding-bottom: 10px;
+}
+
+.secButton {
+  padding-bottom: 29px;
+}
+
+.submitButton {
+  color: whitesmoke;
+  padding-bottom: 20%;
 }
